# halive-standalone-test

./: Foo.hs  make-release  make-release-turtle-wip.hs  stack.yaml  standalone.cabal
app/: Main.hs
src/: Standalone.hs
