name:                standalone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/standalone#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Developer
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     -- , unordered-containers
  exposed-modules:     Standalone
  default-language:    Haskell2010

executable standalone
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halive
                     , mtl
                     , filepath
                     , standalone
                     -- , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/standalone
